<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>java-classloader</artifactId>

   <parent>
      <groupId>cn.tuyucheng.taketoday.java-core-modules</groupId>
      <artifactId>java-core-modules</artifactId>
      <version>1.0.0</version>
   </parent>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <source>23</source>
               <target>23</target>
               <compilerArgs>
                  <arg>--add-exports</arg>
                  <arg>java.base/jdk.internal.loader=taketoday.classloader</arg>
               </compilerArgs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
               <argLine>--add-opens java.base/jdk.internal.loader=taketoday.classloader</argLine>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <properties>
      <maven.compiler.source>23</maven.compiler.source>
      <maven.compiler.target>23</maven.compiler.target>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <java.version>23</java.version>
   </properties>
</project>